# behavior-inference

./: .gitignore  README.md  requirements.txt  ros.requirements.txt
src/rt_bi_commons/: package.xml  setup.py
src/rt_bi_commons/rt_bi_commons/Base/: ColdStartableNode.py  DataDictionaryNode.py  MapRegionsSubscriber.py  RegionsSubscriber.py  RtBiNode.py  TransitionParser.py
src/rt_bi_commons/rt_bi_commons/RosParamParsers/: AtomicParsers.py  JsonParser.py  ReferenceParser.py
src/rt_bi_commons/rt_bi_commons/Shared/: Color.py  MinQueue.py  NodeId.py  Pose.py  Predicates.py  TimeInterval.py  Tracklet.py
src/rt_bi_commons/rt_bi_commons/Utils/: Geometry.py  Msgs.py  NetworkX.py  RViz.py  Ros.py  RtBiInterfaces.py  SaMsgs.py
src/rt_bi_core/: package.xml  setup.py
src/rt_bi_core/config/: ev.debug.yaml  rbc_map.rviz  rbc_str.rviz  rt_bi_core.rviz  rviz.cg.rviz  rviz.ctcd.rviz  rviz.live.rviz  st.debug.yaml
src/rt_bi_core/launch/: all.launch.py  ba.launch.py  di.launch.py  ev.launch.py  main.launch.py  mi.launch.py  msi.launch.py  mti.launch.py  rbc.launch.py  rviz.launch.py  si.launch.py  sml.launch.py  st.launch.py  str.launch.py  syi.launch.py
src/rt_bi_core/rt_bi_core/: AffineRegion.py  BehaviorAutomatonInterface.py  BehaviorInferenceRuntime.py  DyRegTopicInterface.py  DynamicReachability.py  DynamicRegion.py  EventifierInterface.py  FeatureMap.py  MapInterface.py  MapRegion.py  MapServiceInterface.py  MapTopicInterface.py  PolygonalRegion.py  RegionsSubscriber.py  RegularAffineRegion.py  RegularDynamicRegion.py  RegularSpatialRegion.py  SensorRegion.py  SensorTopicInterface.py  ShadowRegion.py  ShadowTreeInterface.py  SymbolRegion.py  SymbolTopicInterface.py  TargetRegion.py  TargetTopicInterface.py  TimeRegion.py  Tracklet.py  __init__.py  main.py
src/rt_bi_core/rt_bi_core/BehaviorAutomaton/: Lambda.py  Nfa.py  SpaceTime.py  Specification.py  Symbol.py  Validator.py  __init__.py
src/rt_bi_core/rt_bi_core/BehaviorInference/: DynamicReachability.py  Lambda.py  Specification.py  Symbol.py
src/rt_bi_core/rt_bi_core/Eventifier/: ConnectivityGraph.py  ContinuousTimeCollisionDetection.py  ContinuousTimeCollisionDetection.v1.py  ContinuousTimeRegion.py  EventAggregator.py  FieldOfView.py  MapPerimeter.py  RegularSymbol.py  ShadowTree.py  Shadows.py
src/rt_bi_core/rt_bi_core/Interface/: MapInterface.py  Parsers.py  __init__.py
src/rt_bi_core/rt_bi_core/Model/: AffineRegion.py  AffineSensorRegion.py  DynamicRegion.py  FeatureMap.py  Fov.py  MapRegion.py  Observations.py  PolygonalRegion.py  RegularAffineRegion.py  RegularDynamicRegion.py  RegularRegion.py  RegularSpatialRegion.py  Scenario.py  SensingRegion.py  Sensor.py  SensorRegion.py  ShadowRegion.py  SymbolRegion.py  TargetRegion.py  TeamMember.py  TimedGraph.py  Track.py  Tracklet.py  Trajectory.py  ValidatorRegion.py  __init__.py  connectivityGraph.py  polygonalRegion.py  trajectory.py  validatorRegion.py
src/rt_bi_core/rt_bi_core/Polygons/: AffinePolygon.py  DynamicPolygon.py  Polygon.py  SensingPolygon.py  ShadowPolygon.py  StaticPolygon.py  TargetPolygon.py
src/rt_bi_core/rt_bi_core/RegularRegions/: DynamicRegion.py  SpatialRegion.py
src/rt_bi_core/rt_bi_core/ShadowTree/: ConnectivityGraph.py  Fov.py  FovUnion.py  Graph.py  ShadowTree.py  __init__.py
src/rt_bi_core/rt_bi_core/Spatial/: AffinePolygon.py  ContinuousTimePolygon.py  DynamicPolygon.py  MovingPolygon.py  Polygon.py  SensingPolygon.py  ShadowPolygon.py  SpatialRegion.py  (+4 more)
src/rt_bi_emulator/: package.xml  setup.py
src/rt_bi_emulator/config/: avs.yaml  c1.avs.yaml  c2.avs.yaml  c2.kns.yaml  c2.sys.yaml  c2.targets.yaml  case1.av1.yaml  case1.avs.yaml  case1.gvs.yaml  case2.av1.yaml  case2.avs.yaml  case2.dys.yaml  case2.sys.yaml  case2.targets.yaml  kns.yaml  rviz.live.rviz  targets.yaml
src/rt_bi_emulator/launch/: av1.1.launch.py  av1.2.launch.py  av1.launch.py  avs.1.launch.py  avs.launch.py  c1.avs.launch.py  c1.ese.launch.py  c1.ese1.launch.py  c2.avs.launch.py  c2.dys.launch.py  c2.ese.launch.py  c2.esy.launch.py  c2.etg.launch.py  c2.sys.launch.py  c2.targets.launch.py  dynamic.launch.py  gv1.launch.py  imp.launch.py  ise.launch.py  isy.launch.py  itg.launch.py  known.launch.py  map.launch.py  sensor.launch.py  smp.launch.py  symbol.launch.py  target.launch.py  ti.launch.py
src/rt_bi_emulator/rt_bi_emulator/: Av.py  AvEmulator.py  Case1.py  DyRegionEmulator.py  GvEmulator.py  MapEmulator.py  MapServiceInterface.py  SaMapEmulator.py  SensorTopicInterface.py  Shared.py  SymbolRegionEmulator.py  SymbolTopicInterface.py  TargetEmulator.py  TargetTopicInterface.py
src/rt_bi_eventifier/: package.xml  setup.py
src/rt_bi_eventifier/config/: ev.debug.yaml  ev.yaml  rviz.cg.rviz  rviz.cgr.rviz  rviz.ctcd.rviz  rviz.igr.0.rviz  rviz.igr.rviz  rviz.igr.z.rviz  rviz.str.rviz
src/rt_bi_eventifier/launch/: ev.launch.py  graphviz.html  rviz.launch.py
src/rt_bi_eventifier/rt_bi_eventifier/: Eventifier.py  main.py
src/rt_bi_interfaces/: CMakeLists.txt  package.xml
src/rt_bi_interfaces/msg/: Adjacency.msg  ColdStart.msg  ComponentEvent.msg  DynamicRegion.msg  Estimation.msg  EstimationMsg.msg  Event.msg  Events.msg  Graph.msg  Id.msg  MapRegion.msg  MapRegionState.msg  MapRegions.msg  Polygon.msg  PoseEstimation.msg  Predicate.msg  RegionSpec.msg  RegularSet.msg  RegularSpace.msg  RegularSpaceArray.msg  RegularSpatialRegion.msg  RegularTemporalRegion.msg  SpaceSpec.msg  TimeInterval.msg  Tracklet.msg  Traversability.msg
src/rt_bi_interfaces/srv/: RegionSpec.srv  SpaceTime.srv  StaticReachability.srv  SymbolResolver.srv
src/rt_bi_utils/: package.xml  setup.cfg  setup.py
src/rt_bi_utils/rt_bi_utils/: Color.py  Geometry.py  MinQueue.py  NetworkX.py  Pose.py  PriorityQ.py  Python.py  RViz.py  Renderer.py  Ros.py  RtBiEmulator.py  RtBiInterfaces.py  RtBiNode.py  SaMsgs.py  __init__.py
src/sa_msgs/: CMakeLists.txt  package.xml
src/sa_msgs/msg/: Detection.msg  EstimationMsg.msg  FeatureInfo.msg  FeatureInfoIndividual.msg  Fov.msg  Plan.msg  PoseArray.msg  RobotState.msg  Velocity.msg
src/sa_msgs/srv/: QueryFeature.srv  QueryVisibility.srv
(+334 files in other folders)
