<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>rt_bi_core</name>
	<version>0.0.1</version>
	<description>The core package of the Behavior Inference project.</description>
	<maintainer email="reza.teshnizi@gmail.com">Reza Teshnizi</maintainer>
	<license>UNLICENSED</license>

	<depend>rclcpp</depend>
	<depend>std_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>visualization_msgs</depend>

	<depend version_gte="0.0.1">rt_bi_utils</depend>
	<!-- <depend version_gte="0.0.1">rt_bi_emulator</depend> -->
	<depend>sa_msgs</depend>
	<depend>sa_semantic_map</depend>

	<export>
		<build_type>ament_python</build_type>
	</export>
</package>
